--- a/src/data/grammar/headlines/tip-money.yaml
+++ b/src/data/grammar/headlines/tip-money.yaml
@@ -4,7 +4,7 @@ tipMoney:
 - "#titleMoney#: #investType.capitalize# #commodity#[_secondPosition:,#comma# #investType# #commodity#]#_secondPosition#"
 - "#titleMoney#: [_whoIs:#pro# is,#pros# #are#]#_whoIs.capitalize# #investingType# #broadCardClassification#;[_implication:should you?,don't get left behind,act #actWhenFinancial#] #_implication#"
 - '[_leadin:#titleMoney#,BREAKING]#_leadin#: Price of [_trend:spiking,skyrocketing,rising,plummeting,soaring,spiraling,crashing,dropping,tumbling]#commodity# #_trend#; [_financialPosition:market cornered by #financialStakeholders#,shorted by #financialStakeholders#,#financialStakeholders# cashing out,#financialStakeholders# investing heavily,#financialStakeholders# doubling down]#_financialPosition#'
-- '#urgentTitleMoney#: Team #team#''s new #constuctedFormat# deck #deckLocation#s #cardOrCategoryCommodity#, [_invest:invest #whenFinancial#,buy in #whenFinancial#,trade #whenFinancial#,move #whenFinancial#,cash out #whenFinancial#]#_invest#'
+- '#urgentTitleMoney#: Team #team#''s new #constructedFormat# deck #deckLocation#s #cardOrCategoryCommodity#, [_invest:invest #whenFinancial#,buy in #whenFinancial#,trade #whenFinancial#,move #whenFinancial#,cash out #whenFinancial#]#_invest#'
 - '#tipMoneyGameChanger#'
 
 tipMoneyGameChanger:
