--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -1,7 +1,7 @@
 {
   "people": ["#pros#","#pros#","#pro#","#pro#","#otherPersonality#"],
   "person": ["#pro#","#pro#","#otherPersonality#"],
-  "miscPersonSingular": ["#pro#", "#otherPersonality#", "#psychographic#", "#officialEntity#"],
+  "miscPersonSingular": ["#pro#", "#otherPersonality#", "#psychographic#", "#officialEntity#", "#mtgArtist#"],
   "peoplePlural": ["#pros#", "#pros#", "#playerCategory.s#[#pluralPronouns#]","#playerCategory.s#[#pluralPronouns#]", "#financialStakeholders#"],
   "pro": [
       "Kai Budde[_proNickname:Kai][_proFullName:Kai Budde][#malePronouns#]",
@@ -178,6 +178,32 @@
     "Scott Larabee[#malePronouns#]",
     "Gavin Verhey[#malePronouns#]",
     "Sheldon Mennery[#malePronouns#]",
+    "Matt Cavotta[#malePronouns#]"
+  ],
+
+  "mtgArtist": [
+    "Terese Nielsen[#femalePronouns#]",
+    "Phil Foglio[#malePronouns#]",
+    "Rebecca Guay[#femalePronouns#]",
+    "Steve Argyl[#malePronouns#]",
+    "Pete Venter[#malePronouns#]",
+    "Heather Hudson[#femalePronouns#]",
+    "Raymond Swanlan[#malePronouns#]",
+    "Ron Spence[#malePronouns#]",
+    "Mark Tedi[#malePronouns#]",
+    "Carl Critchlo[#malePronouns#]",
+    "Matt Cavott[#malePronouns#]",
+    "John Avo[#malePronouns#]",
+    "Drew Tucke[#malePronouns#]",
+    "Volkan Bag[#malePronouns#]",
+    "rk Pos[#malePronouns#]",
+    "Tom Wänerstran[#malePronouns#]",
+    "Adam Re[#malePronouns#]",
+    "Mark Zu[#malePronouns#]",
+    "Richard Kane Ferguso[#malePronouns#]",
+    "Jesper Myrfor[#malePronouns#]",
+    "Brian Snødd[#malePronouns#]",
+    "Zoltan Boros and Gabor Szikszai[#pluralPronouns#]"
   ],
 
   "officialEntityGroup": [
