more clickbait variety; more vocab

--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -185,24 +185,24 @@
     "Terese Nielsen[#femalePronouns#]",
     "Phil Foglio[#malePronouns#]",
     "Rebecca Guay[#femalePronouns#]",
-    "Steve Argyl[#malePronouns#]",
-    "Pete Venter[#malePronouns#]",
+    "Steve Argyle[#malePronouns#]",
+    "Pete Venters[#malePronouns#]",
     "Heather Hudson[#femalePronouns#]",
-    "Raymond Swanlan[#malePronouns#]",
-    "Ron Spence[#malePronouns#]",
-    "Mark Tedi[#malePronouns#]",
-    "Carl Critchlo[#malePronouns#]",
-    "Matt Cavott[#malePronouns#]",
-    "John Avo[#malePronouns#]",
-    "Drew Tucke[#malePronouns#]",
-    "Volkan Bag[#malePronouns#]",
-    "rk Pos[#malePronouns#]",
-    "Tom Wänerstran[#malePronouns#]",
-    "Adam Re[#malePronouns#]",
-    "Mark Zu[#malePronouns#]",
-    "Richard Kane Ferguso[#malePronouns#]",
-    "Jesper Myrfor[#malePronouns#]",
-    "Brian Snødd[#malePronouns#]",
+    "Raymond Swanland[#malePronouns#]",
+    "Ron Spencer[#malePronouns#]",
+    "Mark Tedin[#malePronouns#]",
+    "Carl Critchlow[#malePronouns#]",
+    "Matt Cavotta[#malePronouns#]",
+    "John Avon[#malePronouns#]",
+    "Drew Tucker[#malePronouns#]",
+    "Volkan Baga[#malePronouns#]",
+    "rk Post[#malePronouns#]",
+    "Tom Wänerstrand[#malePronouns#]",
+    "Adam Rex[#malePronouns#]",
+    "Mark Zug[#malePronouns#]",
+    "Richard Kane Ferguson[#malePronouns#]",
+    "Jesper Myrfors[#malePronouns#]",
+    "Brian Snøddy[#malePronouns#]",
     "Zoltan Boros and Gabor Szikszai[#pluralPronouns#]"
   ],
 
